# system_programming

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: meson.build
task_10/: meson.build
task_10/src/task_10/: rotate_vector.cpp
task_10/src/test/: meson.build  rotate_vector_test.cc
task_14/: meson.build
task_14/src/: meson.build
task_14/src/task_14/: main.cpp  meson.build  shell.cpp  shell.h  tokenizer.cpp  tokenizer.h
task_2/: meson.build
task_2/src/: main.cpp  meson.build
task_2/src/task_2/: main.cpp
task_3/: CMakeLists.txt  meson.build
task_3/src/: meson.build
task_3/src/task_3/: cat.cpp  main.cpp  meson.build  message.cpp  message.h  my_tie.cpp  my_tie.h  tie.cpp  tie.h
task_3/src/test/: cat_test.cc  meson.build  message_test.cc  tie_test.cc
task_5/: meson.build
task_5/src/: meson.build
task_5/src/task_5/: merge_sort.cpp  merge_sort.h  meson.build  ostream_iterator.h  user_account.h
task_5/src/test/: merge_sort_test.cc  meson.build  ostream_iterator_test.cc
task_6/: meson.build
task_6/src/: meson.build
task_6/src/task_6/: circle.h  meson.build  polynomial.h  rectangle.h  trait.h
task_6/src/test/: polynomial_test.cc  schur_transform_test.cc  trait_test.cc
task_9/: Doxyfile.in  meson.build
task_9/src/: meson.build
task_9/src/task_9/: meson.build
task_9/src/task_9/task_10/: meson.build  rotate_vector.h
task_9/src/task_9/task_2/: meson.build  vector.h
task_9/src/task_9/task_3/: cat.cpp  cat.h  meson.build  message.cpp
task_9/src/task_9/task_6/: rectangle.h  schur_transform.cpp  schur_transform.h  trait.h
task_9/src/test/: cat_test.cc  merge_sort_test.cc  meson.build  message_test.cc  ostream_iterator_test.cc  polynomial_test.cc  rotate_vector_test.cc  schur_transform_test.cc  tie_test.cc  trait_test.cc
