gtest = dependency('gtest', main: true)
test(
    'message',
    executable(
        'message_test',
        include_directories: src,
        sources: ['message_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'cat',
    executable(
        'cat_test',
        include_directories: src,
        sources: ['cat_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'tie',
    executable(
        'tie_test',
        include_directories: src,
        sources: ['tie_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'ostream_iterator_test',
    executable(
        'ostream_iterator_test',
        include_directories: src,
        sources: ['ostream_iterator_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'merge_sort_test',
    executable(
        'merge_sort_test',
        include_directories: src,
        sources: ['merge_sort_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'trait',
    executable(
        'trait_test',
        include_directories: src,
        sources: ['trait_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'polynomial',
    executable(
        'polynomial_test',
        include_directories: src,
        sources: ['polynomial_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'schur_transform',
    executable(
        'schur_transform_test',
        include_directories: src,
        sources: ['schur_transform_test.cc'],
        dependencies: [gtest]
    )
)

test(
    'rotate_vector',
    executable(
        'rotate_vector_test',
        include_directories: src,
        sources: ['rotate_vector_test.cc'],
        dependencies: [gtest]
    )
)
